QA [Objective in game play too long add wrap] resolved

--- a/src/pages/app/admin/gameplay/gameplay.module.css
+++ b/src/pages/app/admin/gameplay/gameplay.module.css
@@ -41,6 +41,8 @@
   -webkit-box-orient: vertical;
   text-overflow: ellipsis; */
   overflow: auto;
+  word-wrap: break-word;
+  white-space: break-spaces;
 }
 
 .displayInline {
