--- a/src/pages/app/gameuser/gameplay/gameplay.module.css
+++ b/src/pages/app/gameuser/gameplay/gameplay.module.css
@@ -49,6 +49,8 @@
   -webkit-box-orient: vertical;
   text-overflow: ellipsis; */
   overflow: auto;
+  word-wrap: break-word;
+  white-space: break-spaces;
 }
 
 .displayInline {
